--- a/buffalo/business-card/locales/all.en-us.yaml
+++ b/buffalo/business-card/locales/all.en-us.yaml
@@ -1,3 +1,23 @@
 # For more information on using i18n see: https://github.com/nicksnyder/go-i18n
-- id: welcome_greeting
-  translation: "Welcome to Buffalo (EN)"
+- id: page-subtitle
+  translation: My very personal business card.
+- id: footer-prefix
+  translation: Powered by
+
+- id: menu-home
+  translation: Home
+- id: menu-resume
+  translation: Resume
+- id: menu-contact
+  translation: Contact
+
+- id: home-welcome
+  translation: "Welcome to my business card! Here you can learn a lot about me: who am I, what do I do, what are my experiences. You can also find a way to contact me if you believe it's worth it. It is!"
+
+- id: resume-1
+  translation: "[EN] Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nulla ac ultricies leo, efficitur consequat elit. Sed lobortis sed enim efficitur condimentum. Donec sed urna nec purus consectetur fermentum id quis dolor. In quis tortor at magna tempor interdum vitae quis nulla. Cras maximus hendrerit felis, non imperdiet libero vehicula vitae. Aenean facilisis eu libero ac viverra. Integer maximus tellus quis elit luctus, et dignissim erat eleifend."
+- id: resume-2
+  translation: "[EN] Nam porta mattis suscipit. Aliquam id ullamcorper nisi. Proin quis mollis ipsum. Duis mollis lobortis vehicula. Proin ex risus, mollis quis dapibus sit amet, dapibus non massa. Etiam egestas dolor arcu, eu interdum ex ornare ut. Vivamus commodo mauris commodo sapien tempus pellentesque. Mauris metus ex, lobortis quis bibendum bibendum, imperdiet a velit. Mauris rhoncus gravida nibh, suscipit accumsan mauris mollis ut. Suspendisse nibh nunc, ultricies vel aliquam sit amet, varius rhoncus sem. Praesent varius turpis at felis elementum auctor. Cras metus nunc, scelerisque quis arcu nec, pharetra bibendum odio."
+
+- id: contact-message
+  translation: "You can contact using one of the following:"
